--- a/src/Styles/UserPage/UserPage.scss
+++ b/src/Styles/UserPage/UserPage.scss
@@ -1,1 +1,131 @@
 @import "../../Utilities/variables";
+
+.userpage__container {
+    width: 100%;
+    background-image: url("../../Assets/Images/Light-BG-2.jpg");
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    font-family: $sansSerifMain;
+
+    .userpage__banner {
+        max-height: 550px;
+        width: 100%;
+        overflow: hidden;
+        object-fit: cover;
+        object-position: center;
+        display: flex;
+        align-items: center;
+        position: relative;
+
+        img {
+            width: 100%;
+            //   display: block;
+            //   margin-left: auto;
+            //   margin-right: auto;
+        }
+    }
+
+    .userpage__avatar-follow-container {
+        display: flex;
+        justify-content: space-between;
+        padding: 0px 12.5%;
+        height: 50px;
+
+        .userpage__avatar {
+            // position: absolute;
+            // top: 14.5%;
+            // left: 12.5%;
+            width: 250px;
+            height: 250px;
+            transform: translateY(-50%);
+            // transform: translate3d(100%, -50%, 0);
+            border-radius: 50%;
+            overflow: hidden;
+            z-index: 1000;
+            box-shadow: 0px 30px 30px rgba(60, 156, 225, 0.3);
+            // border: 5px solid $mainBlue;
+
+            img {
+                max-width: 100%;
+                max-height: 100%;
+                object-fit: contain;
+                z-index: 1000;
+            }
+        }
+
+        .userpage__follow-container {
+            // position: absolute;
+            // transform: translate3d(3500%, -50%, 0);
+            // top: 17.75%;
+            // right: 12.5%;
+            // transform: translateY(-50%);
+
+            button {
+                padding: 16px 48px;
+                border-radius: 50px;
+                background: white;
+                border: none;
+                font-family: $sansSerifMain;
+                color: $mainBlue;
+                font-weight: 700;
+                font-size: 16px;
+                box-shadow: 0px 10px 20px rgba(60, 156, 225, 0.3);
+                transition: background 0.5s ease, color 0.5s ease,
+                    transform 0.5s ease;
+                transform: translateY(-50%);
+
+                &:hover {
+                    background: rgb(250, 250, 250);
+                    cursor: pointer;
+                    transform: translateY(-55%);
+                }
+            }
+        }
+
+        .userpage__follow-following {
+            button {
+                background: $mainBlue;
+                color: white;
+
+                &:hover {
+                    background: $unfollowRed;
+                }
+            }
+        }
+    }
+
+    .userpage__content {
+        display: flex;
+        gap: $homeGap;
+        padding: 0px 12.5%;
+        width: 100%;
+
+        .userpage__content-stats {
+            display: flex;
+            flex-direction: column;
+            gap: $homeGap;
+            width: 25%;
+            margin-top: 7.5%;
+
+            .profiledetails__details {
+                display: flex;
+                flex-direction: column;
+                gap: 16px;
+
+                .profiledetails__details-item {
+                    display: flex;
+                    gap: 6px;
+                }
+            }
+        }
+
+        .userpage__user-tweets {
+            width: 50%;
+            display: flex;
+            flex-direction: column;
+            gap: $homeGap;
+            margin-top: 0%;
+        }
+    }
+}
