--- a/src/Styles/Suggested/Suggested.scss
+++ b/src/Styles/Suggested/Suggested.scss
@@ -1,20 +1,34 @@
 @import "../../Utilities/variables";
 
 .suggested__container {
-  background-color: rgba(255, 255, 255, 0.5);
-  padding: 36px;
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
-
-  h3 {
-    font-family: $sansSerifMain;
-    color: $lightModeGrey;
-  }
-
-  .suggested__profiles {
+    padding: 36px;
     display: flex;
     flex-direction: column;
-    gap: 12px;
-  }
+    gap: 24px;
+
+    h3 {
+        font-family: $sansSerifMain;
+    }
+
+    .suggested__profiles {
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+    }
+}
+
+.light.suggested__container {
+    background-color: $lightModeWhite90;
+
+    h3 {
+        color: $lightModeGrey;
+    }
+}
+
+.dark.suggested__container {
+    background-color: $darkModeTweet;
+
+    h3 {
+        color: $darkModeText;
+    }
 }
