--- a/src/Styles/UserDropdown/UserDropdown.scss
+++ b/src/Styles/UserDropdown/UserDropdown.scss
@@ -7,8 +7,6 @@
     gap: 36px;
     width: 350px;
     padding: 36px;
-    color: $lightModeGrey;
-    background: rgba(255, 255, 255, 0.971);
     position: absolute;
     top: 120%;
     right: 5%;
@@ -78,4 +76,14 @@
             }
         }
     }
+}
+
+.light.user-dropdown__container {
+    background: $lightModeWhite90;
+    color: $lightModeGrey;
+}
+
+.dark.user-dropdown__container {
+    background: $darkModeGrey;
+    color: $darkModeText;
 }
