--- a/src/Styles/HomePage/HomePage.css
+++ b/src/Styles/HomePage/HomePage.css
@@ -3,7 +3,6 @@
   height: 100vh;
   max-height: 100vh;
   overflow: hidden;
-  background-image: url("../../Assets/Images/Light-BG-2.jpg");
   background-size: cover;
   background-position: center;
 }
@@ -38,5 +37,13 @@
       -ms-flex: 25%;
           flex: 25%;
   height: 100%;
+}
+
+.light.home__container {
+  background-image: url("../../Assets/Images/Light-BG-2.jpg");
+}
+
+.dark.home__container {
+  background-image: url("../../Assets/Images/Dark-BG.jpg");
 }
 /*# sourceMappingURL=HomePage.css.map */
