--- a/src/Styles/HomePage/HomePage.scss
+++ b/src/Styles/HomePage/HomePage.scss
@@ -1,37 +1,44 @@
 @import "../../Utilities/variables";
 
 .home__container {
-  width: 100%;
-  height: 100vh;
-  max-height: 100vh;
-  overflow: hidden;
-  background-image: url("../../Assets/Images/Light-BG-2.jpg");
-  background-size: cover;
-  background-position: center;
+    width: 100%;
+    height: 100vh;
+    max-height: 100vh;
+    overflow: hidden;
+    background-size: cover;
+    background-position: center;
 
-  .home__main {
-    height: 100%;
-    display: flex;
-    gap: $homeGap;
-    padding: 150px 80px 80px;
+    .home__main {
+        height: 100%;
+        display: flex;
+        gap: $homeGap;
+        padding: 150px 80px 80px;
 
-    .home__left-section {
-      max-width: 25%;
-      flex: 25%;
-      height: 100%;
-      // background-color: rgba(255, 255, 255, 0.5);
+        .home__left-section {
+            max-width: 25%;
+            flex: 25%;
+            height: 100%;
+            // background-color: rgba(255, 255, 255, 0.5);
+        }
+
+        .home__middle-section {
+            max-width: 50%;
+            flex: 50%;
+        }
+
+        .home__right-section {
+            max-width: 25%;
+            flex: 25%;
+            height: 100%;
+            // background-color: rgba(255, 255, 255, 0.5);
+        }
     }
+}
 
-    .home__middle-section {
-      max-width: 50%;
-      flex: 50%;
-    }
+.light.home__container {
+    background-image: $lightModeBG;
+}
 
-    .home__right-section {
-      max-width: 25%;
-      flex: 25%;
-      height: 100%;
-      // background-color: rgba(255, 255, 255, 0.5);
-    }
-  }
+.dark.home__container {
+    background-image: $darkModeBG;
 }
