--- a/src/Styles/ProfilePage/ProfilePage.css
+++ b/src/Styles/ProfilePage/ProfilePage.css
@@ -1,13 +1,32 @@
+.profilepage__update-profile {
+  width: 100%;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-backdrop-filter: blur(16px);
+          backdrop-filter: blur(16px);
+  z-index: 100;
+}
+
 .profilepage__container {
   width: 100%;
-  background-image: url("../../Assets/Images/Light-BG-2.jpg");
   background-size: cover;
   background-position: center;
   position: relative;
 }
 
 .profilepage__container .profilepage__banner {
-  height: 550px;
+  max-height: 550px;
   width: 100%;
   overflow: hidden;
   -o-object-fit: cover;
@@ -26,10 +45,46 @@
   width: 100%;
 }
 
-.profilepage__container .profilepage__avatar {
-  position: absolute;
-  top: 450px;
-  left: 7.5%;
+.profilepage__container .profilepage__avatar-button-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 0px 12.5%;
+  height: 50px;
+}
+
+.profilepage__container .profilepage__avatar-button-container .profilepage__avatar {
+  -webkit-transform: translateY(-250%);
+          transform: translateY(-250%);
+}
+
+.profilepage__container .profilepage__avatar-button-container .profilepage__button-container button {
+  padding: 16px 48px;
+  border-radius: 50px;
+  background: #47b8ff;
+  border: none;
+  font-family: "Roboto", sans-serif;
+  color: white;
+  font-weight: 700;
+  font-size: 16px;
+  -webkit-box-shadow: 0px 10px 20px rgba(60, 156, 225, 0.3);
+          box-shadow: 0px 10px 20px rgba(60, 156, 225, 0.3);
+  -webkit-transition: background 0.5s ease, color 0.5s ease, -webkit-transform 0.5s ease;
+  transition: background 0.5s ease, color 0.5s ease, -webkit-transform 0.5s ease;
+  transition: background 0.5s ease, color 0.5s ease, transform 0.5s ease;
+  transition: background 0.5s ease, color 0.5s ease, transform 0.5s ease, -webkit-transform 0.5s ease;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.profilepage__container .profilepage__avatar-button-container .profilepage__button-container button:hover {
+  background: #87dbff;
+  cursor: pointer;
+  -webkit-transform: translateY(-55%);
+          transform: translateY(-55%);
 }
 
 .profilepage__container .profilepage__content {
@@ -37,6 +92,14 @@
   display: -ms-flexbox;
   display: flex;
   gap: 32px;
-  padding: 60px 7.5%;
+  padding: 24px 12.5%;
+}
+
+.light.profilepage__container {
+  background-image: url("../../Assets/Images/Light-BG-2.jpg");
+}
+
+.dark.profilepage__container {
+  background-image: url("../../Assets/Images/Dark-BG.jpg");
 }
 /*# sourceMappingURL=ProfilePage.css.map */
