--- a/src/Styles/ProfilePage/ProfilePage.scss
+++ b/src/Styles/ProfilePage/ProfilePage.scss
@@ -1,14 +1,26 @@
 @import "../../Utilities/variables";
 
+.profilepage__update-profile {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    backdrop-filter: blur(16px);
+    z-index: 100;
+}
+
 .profilepage__container {
     width: 100%;
-    background-image: url("../../Assets/Images/Light-BG-2.jpg");
     background-size: cover;
     background-position: center;
     position: relative;
 
     .profilepage__banner {
-        height: 550px;
+        max-height: 550px;
         width: 100%;
         overflow: hidden;
         object-fit: cover;
@@ -18,21 +30,54 @@
 
         img {
             width: 100%;
-            //   display: block;
-            //   margin-left: auto;
-            //   margin-right: auto;
         }
     }
 
-    .profilepage__avatar {
-        position: absolute;
-        top: 450px;
-        left: 7.5%;
+    .profilepage__avatar-button-container {
+        display: flex;
+        justify-content: space-between;
+        padding: 0px 12.5%;
+        height: 50px;
+
+        .profilepage__avatar {
+            transform: translateY(-250%);
+        }
+
+        .profilepage__button-container {
+            button {
+                padding: 16px 48px;
+                border-radius: 50px;
+                background: $mainBlue;
+                border: none;
+                font-family: $sansSerifMain;
+                color: white;
+                font-weight: 700;
+                font-size: 16px;
+                box-shadow: 0px 10px 20px rgba(60, 156, 225, 0.3);
+                transition: background 0.5s ease, color 0.5s ease,
+                    transform 0.5s ease;
+                transform: translateY(-50%);
+
+                &:hover {
+                    background: $secondaryBlue;
+                    cursor: pointer;
+                    transform: translateY(-55%);
+                }
+            }
+        }
     }
 
     .profilepage__content {
         display: flex;
         gap: $homeGap;
-        padding: 60px 7.5%;
+        padding: 24px 12.5%;
     }
+}
+
+.light.profilepage__container {
+    background-image: $lightModeBG;
+}
+
+.dark.profilepage__container {
+    background-image: $darkModeBG;
 }
