--- a/src/Styles/Suggested/Suggested.css
+++ b/src/Styles/Suggested/Suggested.css
@@ -1,5 +1,4 @@
 .suggested__container {
-  background-color: rgba(255, 255, 255, 0.5);
   padding: 36px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -13,7 +12,6 @@
 
 .suggested__container h3 {
   font-family: "Roboto", sans-serif;
-  color: #5379a6;
 }
 
 .suggested__container .suggested__profiles {
@@ -25,5 +23,21 @@
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 12px;
+}
+
+.light.suggested__container {
+  background-color: rgba(255, 255, 255, 0.9);
+}
+
+.light.suggested__container h3 {
+  color: #5379a6;
+}
+
+.dark.suggested__container {
+  background-color: rgba(25, 40, 70, 0.621);
+}
+
+.dark.suggested__container h3 {
+  color: #e0e7f0;
 }
 /*# sourceMappingURL=Suggested.css.map */
