--- a/src/Styles/Tweet/Tweet.css
+++ b/src/Styles/Tweet/Tweet.css
@@ -1,6 +1,5 @@
 .tweet__container {
   font-family: "Roboto", sans-serif;
-  color: #5379a6;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -9,17 +8,8 @@
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 12px;
-  background: rgba(255, 255, 255, 0.5);
   -webkit-backdrop-filter: blur(16px);
           backdrop-filter: blur(16px);
-  -webkit-box-shadow: 0px 20px 20px rgba(60, 156, 225, 0.099);
-          box-shadow: 0px 20px 20px rgba(60, 156, 225, 0.099);
-}
-
-.tweet__container h3,
-.tweet__container p,
-.tweet__container .tweet__button {
-  color: #5379a6;
 }
 
 .tweet__container .tweet__reply-box {
@@ -54,8 +44,6 @@
   height: 60px;
   overflow: hidden;
   border-radius: 100px;
-  -webkit-box-shadow: 0px 10px 15px rgba(60, 156, 225, 0.186);
-          box-shadow: 0px 10px 15px rgba(60, 156, 225, 0.186);
 }
 
 .tweet__container .tweet__details .tweet__details-user .tweet__details-avatar img {
@@ -63,8 +51,6 @@
   max-width: 100%;
   -o-object-fit: contain;
      object-fit: contain;
-  -webkit-box-shadow: 0px 10px 20px rgba(60, 156, 225, 0.3);
-          box-shadow: 0px 10px 20px rgba(60, 156, 225, 0.3);
 }
 
 .tweet__container .tweet__details .tweet__details-time p {
@@ -169,5 +155,57 @@
 .tweet__container .tweet__interactions .tweet__interactions-options #tweet-options:hover {
   color: #47b8ff;
   cursor: pointer;
+}
+
+.light.tweet__container {
+  background: rgba(255, 255, 255, 0.9);
+  -webkit-box-shadow: 0px 10px 20px rgba(60, 156, 225, 0.3);
+          box-shadow: 0px 10px 20px rgba(60, 156, 225, 0.3);
+}
+
+.light.tweet__container h3,
+.light.tweet__container p,
+.light.tweet__container .tweet__button {
+  color: #5379a6;
+}
+
+.light.tweet__container .tweet__interactions {
+  border-top: 1px solid rgba(138, 180, 211, 0.2);
+}
+
+.light.tweet__container .tweet__details-avatar {
+  -webkit-box-shadow: 0px 10px 20px rgba(60, 156, 225, 0.3);
+          box-shadow: 0px 10px 20px rgba(60, 156, 225, 0.3);
+}
+
+.light.tweet__container .tweet__details-avatar img {
+  -webkit-box-shadow: 0px 10px 20px rgba(60, 156, 225, 0.3);
+          box-shadow: 0px 10px 20px rgba(60, 156, 225, 0.3);
+}
+
+.dark.tweet__container {
+  background: rgba(25, 40, 70, 0.621);
+  -webkit-box-shadow: 0px 10px 20px rgba(41, 69, 122, 0.148);
+          box-shadow: 0px 10px 20px rgba(41, 69, 122, 0.148);
+}
+
+.dark.tweet__container h3,
+.dark.tweet__container p,
+.dark.tweet__container .tweet__button {
+  color: #e0e7f0;
+}
+
+.dark.tweet__container .tweet__interactions {
+  border-top: 1px solid rgba(17, 29, 52, 0.5);
+}
+
+.dark.tweet__container .tweet__details-avatar {
+  -webkit-box-shadow: 0px 10px 20px rgba(41, 69, 122, 0.148);
+          box-shadow: 0px 10px 20px rgba(41, 69, 122, 0.148);
+}
+
+.dark.tweet__container .tweet__details-avatar img {
+  -webkit-box-shadow: 0px 10px 20px rgba(41, 69, 122, 0.148);
+          box-shadow: 0px 10px 20px rgba(41, 69, 122, 0.148);
 }
 /*# sourceMappingURL=Tweet.css.map */
