--- a/src/Styles/UserPage/UserPage.scss
+++ b/src/Styles/UserPage/UserPage.scss
@@ -33,9 +33,6 @@
         height: 50px;
 
         .userpage__avatar {
-            // position: absolute;
-            // top: 14.5%;
-            // left: 12.5%;
             width: 250px;
             height: 250px;
             transform: translateY(-50%);
@@ -107,6 +104,20 @@
             gap: $homeGap;
             width: 25%;
             margin-top: 7.5%;
+            color: $lightModeGrey;
+
+            .profiledetails__user-profile {
+                width: 80%;
+                h3 {
+                    font-weight: 400;
+                }
+            }
+
+            hr {
+                border: none;
+                border-top: 1px solid $lightModeGrey2;
+                width: 80%;
+            }
 
             .profiledetails__details {
                 display: flex;
